--- a/css/getStarted.css
+++ b/css/getStarted.css
@@ -934,6 +934,58 @@
     text-transform: revert;
     height: 40px;
 }
+.payment-page-wrapper .payment-methods-wrap .wallet-balance {
+    font-size: 20px;
+    padding-left: 30px;
+}
+.cards-wrap {
+    margin-top: 20px;
+}
+.card-detail-enter .divider {
+    width: 50%;
+}
+.card-detail-enter .input-forty-percent {
+    width: 90%;
+    padding: 6px 25px;
+    margin-bottom: 15px;
+}
+.card-detail-enter .cvv {
+    width: 30%;
+    display: block;
+}
+.card-detail-enter .divider button {
+    margin-right: 10%;
+}
+.payment-page-container .payment-page-wrapper .payment-methods-wrap label {
+    display: block;
+}
+.payment-page-container .payment-page-wrapper .hor-line {
+    margin-top: 20px;
+}
+.payment-page-container .payment-page-wrapper .card-detail-enter {
+    padding-left: 40px;
+}
+.payment-page-container .promo-code-wrap {
+    width: 80%;
+    margin: 0 auto;
+}
+.payment-page-container .promo-code-wrap p {
+    font-weight: normal;
+    font-size: 18px;
+    font-style: italic;
+}
+.payment-page-container .promo-code-wrap input {
+    padding: 6px 25px;
+    width: 30%;
+    margin-right: 20px;
+}
+.payment-page-container .promo-code-wrap button {
+    padding: 12px 25px;
+    width: 20%;
+}
+.payment-page-container .page-comp-action {
+    margin-top: 7%;
+}
 .footer-main-wrap.steps {
     box-shadow: 0px 6.80462px 34.0231px rgba(0, 0, 0, 0.1);
     bottom: 0;
