--- a/css/common.css
+++ b/css/common.css
@@ -167,3 +167,11 @@ p {
 .glyphicon-pencil:before {
     content: "\270f";
 }
+.hidden {
+    display: none;
+}
+.error {
+    color: #d23e5f;
+    font-weight: 500;
+    font-size: 16px;
+}
