background images change

--- a/css/backgroundImage.css
+++ b/css/backgroundImage.css
@@ -175,6 +175,15 @@
     height: auto;
 }
 .get-started-body {
+    background-image: url("../images/bg-gs-2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.get-started-steps-body,
+.order-summary-body,
+.food-summary-body,
+.payment-body,
+.subscription-body {
     background-image: url("../images/bg-gs-1.png");
     background-repeat: no-repeat;
     background-size: cover;
