--- a/css/getStarted.css
+++ b/css/getStarted.css
@@ -271,7 +271,7 @@
     text-align: center;
     color: #fff;
     font-weight: 500;
-    width: 97px;
+    width: 12%;
     height: 107px;
 }
 .seven-days-preview .days-wrap-in .days-tile .date {
@@ -352,6 +352,11 @@
 
 .meal-option-ch .meal-option-chosen-in .meal-cat-image {
     width: 50%;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.meal-option-ch .meal-option-chosen-in .meal-cat-image img {
+    width: 95%;
 }
 .meal-option-ch .meal-option-chosen-in .meal-action-det {
     width: 50%;
@@ -446,12 +451,13 @@
 }
 
 .subscription-container .subscription-tile {
-    width: 30%;
+    max-width: 30%;
     background: #ffffff;
     box-shadow: 0px 6.80462px 34.0231px rgba(0, 0, 0, 0.1);
     border-radius: 18px;
     margin-right: 25px;
     position: relative;
+    width: 27%;
 }
 
 .subscription-container .subscription-tile .recomm {
