--- a/css/index.css
+++ b/css/index.css
@@ -12,12 +12,13 @@ header {
     width: 90%;
     margin: 0 auto;
 }
-.header-left-wrap, .header-right-wrap {
-    width:49%;
+.header-left-wrap,
+.header-right-wrap {
+    width: 49%;
     display: inline-block;
     box-sizing: border-box;
 }
-.header-left-wrap{
+.header-left-wrap {
     padding-top: 7px;
     padding-bottom: 7px;
 }
@@ -34,53 +35,56 @@ header {
 
 .banner-wrap {
     width: 100%;
-    height: 820px;
+    height: 700px;
     overflow: hidden;
     text-align: center;
-    padding-top: 40px;
+    padding-top: 15px;
     position: relative;
     /* border-radius: 0% 0% 0% 70%; */
 }
 
-.banner-wrap .header-in .left, .banner-wrap .header-in .right {
+.banner-wrap .header-in .left,
+.banner-wrap .header-in .right {
     display: inline-block;
 }
 .banner-wrap .header-in .left {
-    color: #F7931E;
+    color: #f7931e;
 }
 .banner-wrap .header-in .left h3 {
     margin: 0;
     padding: 0;
-    font-size: 50px;
+    font-size: 40px;
+    letter-spacing: 0.8px;
 }
 .banner-wrap .header-in .left h4 {
     margin: 0;
     padding: 0;
-    font-size: 30px;
+    font-size: 25px;
 }
 
-.banner-wrap .header-in .right{
+.banner-wrap .header-in .right {
     vertical-align: top;
 }
 
 .banner-wrap .header-in .right h2 {
     margin: 0;
     padding: 0;
-    color: #D23E5F;
-    font-size: 78px;
+    color: #d23e5f;
+    font-size: 60px;
     padding-top: 0px;
-    padding-left: 25px;
+    padding-left: 20px;
+    line-height: 70px;
 }
 
 .banner-wrap .banner img {
     width: 100%;
-    height: 820px;
+    height: 700px;
 }
 
 .banner-wrap .parent {
     position: absolute;
     top: 0;
-    z-index: -99;    
+    z-index: -99;
     width: 100%;
 }
 .special-container {
@@ -107,17 +111,16 @@ header {
     font-size: 35px;
     padding-top: 7px;
     padding-bottom: 7px;
-    color: #233A5A;
+    color: #233a5a;
 }
 .how-it-works .heading h3 span {
-    color: #F7931E;
+    color: #f7931e;
 }
 
 .how-it-works .parent {
     width: 80%;
     margin: 0 auto;
     padding-top: 30px;
-
 }
 .how-it-works .parent .item {
     float: left;
@@ -145,7 +148,7 @@ header {
     color: #233a5a;
     font-style: normal;
     font-weight: normal;
-    
+
     line-height: 161.5%;
 }
 .how-it-works .action {
@@ -155,15 +158,15 @@ header {
 
 /* how it works css ends */
 
-
 /* our menu div css starts */
 .our-menu {
-    background: #F6F6F6;
+    background: #f6f6f6;
     margin-bottom: 40px;
     padding-top: 50px;
     padding-bottom: 50px;
 }
-.our-menu .heading, .our-menu .description {
+.our-menu .heading,
+.our-menu .description {
     text-align: center;
 }
 .our-menu .heading h3 {
@@ -172,34 +175,33 @@ header {
     font-size: 35px;
     padding-top: 7px;
     padding-bottom: 7px;
-    color: #233A5A;
+    color: #233a5a;
 }
 .our-menu .heading h3 span {
-    color: #F7931E;
+    color: #f7931e;
 }
 
 .our-menu .parent {
     width: 100%;
     margin: 0 auto;
     padding-top: 50px;
-
 }
 .our-menu .parent .item {
     text-align: center;
 }
 
 .our-menu .description p {
-   margin: 0;
-   padding: 0;
-   line-height: 1.47;   
+    margin: 0;
+    padding: 0;
+    line-height: 1.47;
 }
 
 .our-menu .parent .menu-item {
     float: left;
 }
 
-.our-menu .parent .menu-item .desc h5{
-    color: #233A5A;
+.our-menu .parent .menu-item .desc h5 {
+    color: #233a5a;
     font-weight: 500;
     font-size: 18px;
     line-height: 26px;
@@ -214,7 +216,7 @@ header {
     font-size: 18px;
     line-height: 147%;
     text-align: center;
-    color: #233A5A;
+    color: #233a5a;
 }
 
 .our-menu .parent .menu-item .item img {
@@ -239,24 +241,22 @@ header {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 35px;
-    color: #233A5A;
+    color: #233a5a;
 }
 .fr-ha-co .heading h3 span {
-    color: #F7931E;
+    color: #f7931e;
 }
 
 .fr-ha-co .parent {
     width: 100%;
     margin: 0 auto;
     padding-top: 50px;
-
 }
 
 .fr-ha-co .parent {
     width: 80%;
     margin: 0 auto;
     padding-top: 30px;
-
 }
 .fr-ha-co .parent .item {
     float: left;
@@ -284,10 +284,9 @@ header {
     letter-spacing: -0.576517px;
     text-transform: uppercase;
 
-    color: #233A5A;
+    color: #233a5a;
     margin-top: 0;
     margin-bottom: 0;
-
 }
 .fr-ha-co .parent .item .reason p {
     font-family: SF Pro Display;
@@ -299,9 +298,8 @@ header {
 
     text-align: center;
 
-    color: #0F2340;
+    color: #0f2340;
     margin-top: 15px;
-    
 }
 .fr-ha-co .action {
     text-align: center;
@@ -313,7 +311,7 @@ header {
 /* faq css starts */
 
 .faq-wrap {
-    background: #F6F6F6;
+    background: #f6f6f6;
     margin-bottom: 40px;
     padding-top: 40px;
 }
@@ -326,14 +324,14 @@ header {
     font-size: 35px;
     padding-top: 30px;
     padding-bottom: 30px;
-    color: #233A5A;
+    color: #233a5a;
     background-image: url(../images/faq-mask.png);
     background-repeat: no-repeat;
     background-position-x: 49%;
     background-position-y: 2px;
 }
 .faq-wrap .heading h3 span {
-    color: #F7931E;
+    color: #f7931e;
 }
 
 .faq-wrap .parent {
@@ -343,7 +341,8 @@ header {
     padding-bottom: 100px;
 }
 
-.faq-wrap .parent .container-left, .faq-wrap .parent .container-right {
+.faq-wrap .parent .container-left,
+.faq-wrap .parent .container-right {
     float: left;
     width: 48%;
     margin-right: 10px;
@@ -353,7 +352,7 @@ header {
     margin-bottom: 10px;
     background-color: #fff;
     padding: 22px;
-    color: #233A5A;
+    color: #233a5a;
 }
 
 .faq-wrap .parent .question-wrapper .question {
@@ -361,8 +360,8 @@ header {
     font-weight: 500;
     font-size: 18px;
     line-height: 1.3;
-    color: #233A5A;
-    background-image: url('../images/down-arr.png');
+    color: #233a5a;
+    background-image: url("../images/down-arr.png");
     background-repeat: no-repeat;
     background-position: right center;
 }
@@ -373,10 +372,9 @@ header {
     font-size: 18px;
     line-height: 161.5%;
     /* or 29px */
-    color: #0F2340;
+    color: #0f2340;
     padding-top: 20px;
     display: none;
-
 }
 
 /* faq css ends */
@@ -395,14 +393,14 @@ header {
     font-size: 35px;
     padding-top: 35px;
     padding-bottom: 35px;
-    color: #233A5A;
+    color: #233a5a;
     background-image: url(../images/why-us-mask.png);
     background-repeat: no-repeat;
     background-position-x: 49%;
     background-position-y: -3px;
 }
 .why-us .heading h3 span {
-    color: #F7931E;
+    color: #f7931e;
 }
 .why-us .parent {
     width: 82%;
@@ -442,10 +440,9 @@ header {
     letter-spacing: -0.576517px;
     text-transform: uppercase;
 
-    color: #233A5A;
+    color: #233a5a;
     margin-top: 0;
     margin-bottom: 0;
-
 }
 .why-us .parent .item .reason p {
     font-style: normal;
@@ -456,9 +453,8 @@ header {
 
     text-align: center;
 
-    color: #0F2340;
+    color: #0f2340;
     margin-top: 15px;
-    
 }
 
 /* why us css ends */
@@ -479,7 +475,9 @@ header {
     height: 92px;
 }
 
-.footer-main-wrap .footer-in .f-logo, .footer-main-wrap .footer-in .f-social, .footer-main-wrap .footer-in .f-contact {
+.footer-main-wrap .footer-in .f-logo,
+.footer-main-wrap .footer-in .f-social,
+.footer-main-wrap .footer-in .f-contact {
     float: left;
 }
 
@@ -494,7 +492,7 @@ header {
     font-size: 14px;
     line-height: 1.3;
     /* identical to box height, or 21px */
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .footer-main-wrap .footer-in .f-social ul {
@@ -514,14 +512,14 @@ header {
     font-size: 16px;
     line-height: 1.3;
     /* identical to box height, or 21px */
-    color: #FFFFFF;
+    color: #ffffff;
     margin-bottom: 20px;
 }
 
 .footer-main-wrap .footer-in .f-contact p {
     font-style: normal;
     font-size: 16px;
-    color: #FFFFFF;
+    color: #ffffff;
     margin-bottom: 0;
 }
 
@@ -553,8 +551,8 @@ header {
 }
 
 .footer-out ul li span {
-    background-color: #FFFFFF;
-    content: '';
+    background-color: #ffffff;
+    content: "";
     height: 5px;
     width: 5px;
     border-radius: 50%;
@@ -564,13 +562,11 @@ header {
     right: -3px;
 }
 
-
-
 .footer-out ul li a {
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 /* footer css ends */
@@ -578,7 +574,7 @@ header {
 /* Copyright css starts */
 
 .copyright {
-    background-color: #1A2B4E;
+    background-color: #1a2b4e;
     color: #fff;
     text-align: center;
 }
@@ -595,7 +591,7 @@ header {
 /* Copyright css ends */
 
 .faq-wrap {
-    background-image: url('../images/bg-4.png');
+    background-image: url("../images/bg-4.png");
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
@@ -608,7 +604,8 @@ header {
     .faq-wrap .parent {
         width: 80%;
     }
-    .faq-wrap .parent .container-left, .faq-wrap .parent .container-right {
+    .faq-wrap .parent .container-left,
+    .faq-wrap .parent .container-right {
         width: 100%;
     }
     .why-us .parent .item {
@@ -634,7 +631,6 @@ header {
     }
     .f-contact {
         text-align: center;
-
     }
     .footer-out .sub-menu {
         width: 100%;
@@ -653,16 +649,16 @@ header {
     .header-in {
         margin-top: 30px;
     }
-    .banner-wrap .banner img, .banner-wrap {
+    .banner-wrap .banner img,
+    .banner-wrap {
         height: 640px;
     }
     .banner-wrap .header-in .right h2 {
         padding-left: 10px;
     }
-
 }
 
-@media only screen and (min-width:767px) and (max-width: 1000px) {
+@media only screen and (min-width: 767px) and (max-width: 1000px) {
     .why-us .parent {
         width: 88%;
     }
