css changes -register page

--- a/css/common.css
+++ b/css/common.css
@@ -178,3 +178,8 @@ p {
 header {
     background-color: #fff;
 }
+.footer-main-wrap.fix {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
