--- a/css/getStarted.css
+++ b/css/getStarted.css
@@ -565,14 +565,21 @@
     margin-right: auto;
 }
 .register-container {
-    padding-top: 8%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 78vh !important;
 }
 .register-wrap-par {
     background: #fff;
-    width: 80%;
+    width: 70%;
     border-radius: 20px;
     margin-left: auto;
     margin-right: auto;
+}
+.register-wrapper .head {
+    padding-top: 20px;
+    margin-bottom: 10px;
 }
 
 .auth-wrapper-inn {
@@ -585,7 +592,6 @@
     width: 60%;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 80px;
 }
 .top-links {
     margin-bottom: 30px;
@@ -671,7 +677,7 @@
 .register-wrapper .input-con input {
     width: 80% !important;
     display: inline-block;
-    padding: 8px 25px;
+    padding: 6px 25px;
 }
 
 .register-wrapper .input-con .error {
@@ -679,7 +685,6 @@
 }
 .register-wrapper .head {
     color: #000;
-    margin-bottom: 50px;
 }
 .register-wrapper .head p {
     color: #333;
@@ -689,18 +694,19 @@
     width: 15%;
 }
 .register-wrapper .divider.in {
-    width: 80%;
+    width: 85%;
 }
 
 .register-wrapper .divider.in input {
-    width: 47% !important;
-    margin-right: 10px;
+    width: 46% !important;
+    margin-right: 0px;
     margin-bottom: 10px;
+    margin-left: 5px;
 }
 
 .register-wrapper .form-action {
     text-align: center;
-    padding-top: 30px;
+    padding-top: 15px;
 }
 
 .payment-wrapper {
