--- a/css/getStarted.css
+++ b/css/getStarted.css
@@ -81,7 +81,6 @@
 .menu-building-options .step-actions {
     margin-top: 45px;
     margin-bottom: 45px;
-    width: 100%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -89,15 +88,22 @@
     flex-basis: 100%;
     flex-wrap: wrap;
     justify-content: center;
+    flex-flow: row wrap;
 }
 .menu-building-options .step-actions .actions {
     text-align: center;
     padding-top: 15px;
     padding-bottom: 15px;
 }
+.menu-building-options .step-actions.cuisine .actions {
+    flex: 0 1 calc(25% - 8px);
+}
+.menu-building-options .step-actions.half-wid .actions {
+    flex: 0 1 calc(45% - 8px);
+}
 .menu-building-options .step-actions button {
-    height: 74px;
-    width: 255px;
+    height: 70px;
+    width: 200px;
     color: #333;
     font-weight: 500;
     font-size: 14px;
@@ -106,8 +112,17 @@
     border: none;
     background-size: contain;
     background-repeat: no-repeat;
-    padding-top: 10px;
     padding-left: 50px;
+}
+.menu-building-options .step-actions.cuisine button {
+    width: 100%;
+}
+
+.menu-building-options .step-in-action button {
+    width: 50px;
+    height: 50px;
+    margin-top: 25px;
+    margin-left: 15px;
 }
 .prev {
     position: absolute;
