--- a/css/backgroundImage.css
+++ b/css/backgroundImage.css
@@ -198,3 +198,21 @@
     background-repeat: no-repeat;
     background-size: 100% auto;
 }
+.less-oil p {
+    background-image: url("../images/less-oily-img.png");
+}
+.fr-nat p {
+    background-image: url("../images/fresh-ing-img.png");
+}
+
+.hyg-safe p {
+    background-image: url("../images/hygeine-img.png");
+}
+.filter-by {
+    background-image: url("../images/filter-icon.png");
+    background-repeat: no-repeat;
+}
+.bubble {
+    background-image: url("../images/bubble.png");
+    background-repeat: no-repeat;
+}
