--- a/css/hospital.css
+++ b/css/hospital.css
@@ -66,3 +66,53 @@
     background-color: darkgrey;
     border-radius: 20px;
 }
+/* delivery page */
+
+section .del-to {
+    background-color: #dcfffd;
+    font-size: 18px;
+    font-weight: 500;
+    padding-left: 10%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-position-x: 7%;
+    background-position-y: 5px;
+}
+.cart.delivery .delivery-container {
+    background: linear-gradient(
+        180deg,
+        rgba(13, 170, 10, 0.24) 0%,
+        rgba(33, 189, 210, 0.36) 100%
+    );
+    padding: 60px;
+}
+.cart.delivery .delivery-wrapper {
+    background: #fff;
+    border-radius: 10px;
+}
+.cart.delivery .delivery-wrapper .head h3 {
+    color: #ea9342;
+}
+.cart.delivery .delivery-wrapper .head {
+    margin-bottom: 30px;
+}
+.cart.delivery .delivery-wrapper .input-con {
+    width: 50%;
+    margin: 0 auto;
+}
+.cart.delivery .delivery-wrapper .input-con p {
+    text-align: left;
+    padding-left: 10px;
+    padding-top: 5px;
+}
+.cart.delivery .delivery-wrapper input {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: 500;
+}
+.cart.delivery .delivery-wrapper .main-action {
+    margin-top: 40px;
+}
+
+/* delivery page ends here */
