--- a/css/hospital.css
+++ b/css/hospital.css
@@ -111,8 +111,59 @@ section .del-to {
     font-size: 16px;
     font-weight: 500;
 }
+.cart .cart-wrapper {
+    padding: 30px;
+}
 .cart.delivery .delivery-wrapper .main-action {
     margin-top: 40px;
+}
+.total-wrap.cart h4 {
+    font-size: 20px;
+}
+.cart .ordered-item {
+    border-top: 1px solid #f4f4f4;
+    border-bottom: 1px solid #f4f4f4;
+    margin-top: 10px;
+    padding-top: 20px;
+    position: relative;
+}
+.cart .ordered-item .item-wrapper img {
+    width: 150px;
+    height: 130px;
+}
+.cart .ordered-item .item-wrapper {
+    background-color: #c8d80e;
+    border-radius: 10px;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.cart .ordered-item .item-detail-wrap p {
+    margin-bottom: 5px;
+}
+.cart .ordered-item .item-detail-wrap .arriving-info p {
+    font-weight: normal;
+}
+.cart .ordered-item .item-detail-wrap .del-time {
+    color: #666;
+    padding-left: 30px;
+    background-size: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-position-y: 7px;
+}
+.cart .ordered-item .item-action-wrap {
+    text-align: right;
+}
+.item-action-wrap .del-icon a {
+    text-decoration: none !important;
+    color: #666 !important;
+    display: block;
+}
+.cart .ordered-item .item-action-wrap .clasfi {
+    position: absolute;
+    right: 15px;
+    top: 110px;
 }
 
 /* delivery page ends here */
