--- a/account/css/profile.css
+++ b/account/css/profile.css
@@ -46,14 +46,14 @@ a:hover {
   text-decoration: none !important;
   color: black;
 }
-.main {
+/* .main {
   object-fit: contain;
   background-image: url("../images/mainbg.png");
   box-shadow: inset 4px 3px 8px 1px #969696;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-}
+} */
 .content {
   border-radius: 20px !important;
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.25);
