--- a/account/css/managesub.css
+++ b/account/css/managesub.css
@@ -2,8 +2,11 @@
 h6 {
   font-size: 18px;
 }
-.btenpx {
-  border-radius: 10px;
+.perd {
+  color: rgba(243, 80, 54, 1);
+}
+.pricered {
+  color: rgba(210, 62, 95, 1);
 }
 @font-face {
   font-family: "SF PRO DISPLAY";
@@ -20,16 +23,16 @@ h6 {
 .font-weight-bold {
   font-family: "SF PRO DISPLAY bold";
 }
-.d-inline-flex {
-  display: -webkit-inline-box !important;
-  display: -ms-inline-flexbox !important;
-  /* display: inline-flex!important; */
-}
 .btn-warning {
-  background: rgba(55, 186, 215, 0.33) !important;
-  border-radius: 20px;
+  background: rgba(196, 196, 196, 1) !important ;
+
+  border-radius: 5px;
   border: 0px !important;
+  color: white;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+a.btn-warning:hover {
+  color: white;
 }
 .btn-group-lg > .btn,
 .btn-lg {
@@ -46,9 +49,6 @@ h6 {
 h5 {
   font-size: 20px !important;
 }
-.fw7 {
-  font-weight: 700;
-}
 
 @font-face {
   font-family: "SF PRO DISPLAY 500";
@@ -56,9 +56,7 @@ h5 {
   font-weight: normal;
   font-style: normal;
 }
-.fw5 {
-  font-family: "SF PRO DISPLAY 500";
-}
+
 body {
   object-fit: cover;
   overflow-x: hidden;
@@ -82,6 +80,7 @@ body {
 a {
   text-decoration: none !important;
   color: black;
+  cursor: pointer;
 }
 a:hover {
   text-decoration: none !important;
@@ -102,6 +101,7 @@ a:hover {
   background-size: contain;
   font-family: "SF PRO DISPLAY";
   font-size: 14px !important;
+  overflow: hidden;
 }
 .mainc {
   object-fit: contain;
@@ -113,17 +113,79 @@ a:hover {
   box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.25);
 }
 .border {
-  border-radius: 10px;
-  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.25);
+  border-bottom-width: 3px !important;
+  border: 1px solid #c4c4c4 !important;
 }
 .form-group input {
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
   border-radius: 5px !important;
   border: 0px !important;
 }
-.grhead {
-  font-size: 20px !important;
-  color: rgba(108, 102, 105, 1);
+.fw8 {
+  font-family: SF PRO DISPLAY bold;
+  font-weight: 800;
+  font-size: 5rem;
+}
+
+.fw5 {
+  font-family: "SF PRO DISPLAY 500" !important;
+  font-weight: 500 !important;
+  font-size: 20px;
+}
+.fw6 {
+  font-family: SF PRO DISPLAY bold;
+  font-weight: 600;
+  font-size: 1.5625rem;
+}
+.fw4 {
+  font-family: "SF PRO DISPLAY";
+  font-weight: 400;
+  font-size: 20px;
+}
+.fw724 {
+  font-family: SF PRO DISPLAY bold;
+  font-weight: 700;
+  font-size: 24px;
+}
+.fw524 {
+  font-family: "SF PRO DISPLAY 500" !important;
+  font-weight: 500 !important;
+  font-size: 18px !important;
+}
+.fw416 {
+  font-family: "SF PRO DISPLAY 500" !important;
+  font-weight: 400 !important;
+  font-size: 16px !important;
+}
+
+select {
+  height: 24.565227508544922px;
+  max-width: 42px !important;
+  border: 0.25px solid rgba(196, 196, 196, 1);
+  background-image: url("../icon/dropdown.png");
+  -webkit-appearance: none;
+  background-repeat: no-repeat;
+  background-position: 80%;
+}
+a.redac {
+  color: #d23e5f;
+}
+.border-left {
+  border-left: 1px solid rgba(0, 0, 0, 1) !important;
+}
+.redb {
+  background: rgba(210, 62, 95, 1);
+  color: white;
+  border-radius: 5px;
+}
+a.redb:hover {
+  color: white;
+}
+.more {
+  display: block;
+}
+.curr {
+  display: block;
 }
 /* footer */
 footer {
@@ -154,14 +216,11 @@ i.fad {
   padding: 10px;
   border-radius: 50%;
 }
-.show {
-  display: block !important;
-}
-.collaps {
-  display: none !important;
+.save {
+  display: block;
 }
 .add {
-  display: none;
+  display: block;
 }
 .input-icons {
   position: absolute;
@@ -184,7 +243,17 @@ i.fad {
     object-fit: cover;
     overflow-x: hidden;
   }
-
+  .fw5 {
+    font-family: "SF PRO DISPLAY 500" !important;
+    font-weight: 500 !important;
+    font-size: 25px !important;
+  }
+  .redb {
+    border-radius: 10px;
+  }
+  .btn-warning {
+    border-radius: 10px;
+  }
   .main {
     object-fit: cover;
     background-image: url("../images/mobbgimg.png");
@@ -194,7 +263,8 @@ i.fad {
     background-size: 95%;
     box-shadow: none;
     font-family: "SF PRO DISPLAY";
-    font-size: 14px !important;
+    font-size: 12px !important;
+    overflow: hidden;
   }
   .rounded-0 {
     border-radius: 8px !important;
@@ -212,19 +282,60 @@ i.fad {
   .btn-lg {
     font-size: 24px;
   }
+  .fw8 {
+    font-family: SF PRO DISPLAY bold;
+    font-weight: 800;
+    font-size: 5rem;
+  }
+
+  .fw6 {
+    font-family: SF PRO DISPLAY bold;
+    font-weight: 600;
+    font-size: 1.5625rem;
+  }
+  .fw4 {
+    font-family: "SF PRO DISPLAY";
+    font-weight: 400;
+    font-size: 16px;
+  }
+  .fw724 {
+    font-family: SF PRO DISPLAY bold;
+    font-weight: 700;
+    font-size: 18px;
+  }
+  .fw524 {
+    font-family: "SF PRO DISPLAY 500" !important;
+    font-weight: 500 !important;
+    font-size: 15px !important;
+  }
+  .fw416 {
+    font-family: "SF PRO DISPLAY 500" !important;
+    font-weight: 400 !important;
+    font-size: 14px !important;
+  }
+  img.acicon {
+    max-width: 60px;
+    max-height: 60px;
+  }
   .h6,
   h6 {
     font-size: 14px;
   }
-  h5 {
-    font-size: 14px;
+  .more {
+    display: none;
+  }
+  .curr {
+    display: block;
+  }
+  h6.fw5 {
+    font-size: 13px !important;
+  }
+  h6.ac {
+    font-size: 20px !important;
   }
   .grhead {
     font-size: 18px;
-    color: rgba(0, 0, 0, 1);
-  }
-  .fw7 {
-    font-size: 14px !important;
+    color: rgba(183, 179, 181, 1) !important;
   }
   .fs14 {
     font-size: 14px !important ;
